# deps-sensor

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  CHANGELOG.md  Dockerfile  Makefile  README.md  WORKSPACE  elm.json  package.yaml  stack-snapshot.yaml  stack.yaml
.github/workflows/: build.yaml  verify.yaml
app/: Main.hs
elm-src/: Deps.elm  Main.elm
example/: README.md  config.yaml
src/DepsSensor/: Assets.hs  Cmd.hs  Config.hs  Deps.hs  Env.hs
test/: Spec.hs
